# cuda_hip_cl_benchmark

golcl/: .gitignore  CMakeLists.txt  Dockerfile
golcl/kernels/: gol.cl
golcl/scripts/: gridfile_gen.py
golcl/src/: clBenchmark.h  clStuff.h  main.cpp
golcuda/: CMakeLists.txt  Dockerfile
golcuda/src/: kernel.cu
golhip/: .dockerignore  CMakeLists.txt  Dockerfile  hip-libraries-cuda-ubuntu.Dockerfile
golhip/src/: benchmarkLogger.h  kernel.hip
scripts/: benchmark.py  pwgen.py
sha256cl/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  saxpy_kernel.cl
sha256cl/kernels/: saxpy.cl  sha256.cl  sha256_v2.cl
sha256cl/scripts/: pwgen.py
sha256cl/src/: clStuff.cpp  clStuff.h  main.cpp
sha256cuda/: CMakeLists.txt  Dockerfile
sha256cuda/src/: kernel.cu  kernel.cu.hip  sha256_cpu.cpp
sha256hip/: .clang-format  CMakeLists.txt  Dockerfile  README.md  hip-libraries-cuda-ubuntu.Dockerfile
sha256hip/src/: kernel.hip  sha256_cpu.cpp  sha256_cpu.h
